kubernetes/seafile/addl/onlyoffice_integration/deployment.yml
## onlyoffice app
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: onlyofficeds
  namespace: my-seafile
  labels:
    app: onlyofficeds
spec:
  replicas: 1
  selector:
    matchLabels:
      app: onlyofficeds
  template:
    metadata:
      labels:
        app: onlyofficeds
        networking/allow-external-https: "true"
    spec:
      containers:
        - image: onlyoffice/documentserver:latest
          name: onlyoffice
          ports:
            - containerPort: 80
          resources: {}
      restartPolicy: Always

---
kind: Service
apiVersion: v1
metadata:
 name: onlyofficeds
 namespace: my-seafile
spec:
  selector:
    app: onlyofficeds
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
